<resources>
    <string name="app_name">ABL</string>
    <string name="nav_header_desc">TODO</string>
    <string name="nav_header_title">Abdullah</string>
    <string name="Home">Dashboard</string>
    <string name="customer_name">Customer Name *</string>
    <string name="customer_name_wdout_asterik">Customer Name </string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="please_select_date">Please Select Date</string>
    <string name="enter_ac_name">Enter Account No</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="contact_number">Contact Number *</string>
    <string name="contact_number_wdout_asterik">Contact Number </string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="company_name">Company Name *</string>
    <string name="company_name_wdout_asterik">Company Name </string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="address">Address *</string>
    <string name="addresswdout_asterik">Address </string>
    <string name="error_login_id">PLease Enter Login ID </string>
    <string name="un_synced_msg">PLease upload data first </string>
    <string name="enter_address">Enter Address</string>
    <string name="additional_information">Additional Information</string>
    <string name="cnic">CNIC</string>
    <string name="enter_cnic">Enter CNIC</string>
    <string name="martial_status">Martial Status</string>
    <string name="source_of_income">Source of Income</string>
    <string name="estimated_income">Estimated Income</string>
    <string name="enter_income">Enter Income</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter Age</string>
    <string name="gender">GENDER</string>
    <string name="update">update</string>
    <string name="error_permission">Kindly grant permission</string>
    <string name="are_u_existing_bank_customer">Are You Existing Bank Customer?</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_price">Vehicle Price</string>
    <string name="down_payment_percent">Down Payment (%)</string>
    <string name="enter_tenure">Enter Tenure</string>
    <string name="tenure_in__years">Tenure in Years</string>
    <string name="insurance_option">Insurance Option</string>
    <string name="insurance">Insurance</string>
    <string name="insuranceline">Insurance\n</string>
    <string name="mark_up_rate_percent">Mark up Rate (%)</string>
    <string name="mark_up_rate">Mark up Rate</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="apni_car"><u>APNI CAR</u></string>
    <string name="add_lead"><u>Add Lead</u></string>
    <string name="dummy_name">Shakoor Ali</string>
    <string name="dummy_number">0345*******</string>
    <string name="dummy_company_name">Hoobnob</string>
    <string name="dummy_address">P.E.C.H.S Housing Society</string>
    <string name="dummy_cnic">42***********</string>
    <string name="dummy_source_of_income">Salaried</string>
    <string name="dummy_martial_status">Married</string>
    <string name="dummy_estimated_income">50000</string>
    <string name="dummy_age">50</string>
    <string name="dummy_gender">Female</string>
    <string name="sync">SYNC</string>
    <string name="upload">UPLOAD</string>
    <string name="call_lead">CALL LEAD</string>
    <string name="visit_lead">VISIT LEAD</string>
    <string name="visit">Visit Lead</string>
    <string name="daily_ncomments">DAILY \n COMMITMENTS</string>
    <string name="monthly_ncomments">MONTHLY \n COMMITMENTS</string>
    <string name="dummy_account_no">12345-12345678</string>
    <string name="dummy_date">16-10-2020</string>
    <string name="dummy_time">12:10 PM</string>
    <string name="dummy_amt">2,000,00</string>
    <string name="add_event_title">Add Event Title</string>
    <string name="add_event_description">Add Event Description</string>
    <string name="select_color">Select Color</string>
    <string name="dummy_remarks">Customer willing to deposit amount soon.</string>
    <string name="submit">Submit</string>
    <string name="account_no">Account Number</string>
    <string name="event_title">Event Title</string>
    <string name="status">Status * </string>
    <string name="contact_no">Contact No *</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="date_of_conversion">Date of Conversion</string>
    <string name="product">Product *</string>
    <string name="amount">Amount</string>
    <string name="remarks">Remarks</string>
    <string name="r_u_sure_want_to_logout">Are You Sure ? \n You want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_valid_cnic_number">Please enter valid cnic number</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="please_enter_valid_year">Please enter valid year</string>
    <string name="please_enter_valid_account_number">Please enter valid account number</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="token_null">Token Null !!</string>
    <string name="verification_failed">Failed to verified OTP</string>
    <string name="force_logout_message">You have been force logout</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="housing_finance">Housing Finance</string>
    <string name="apni_car_lower">Apni Car</string>
    <string name="cash_finance">Cash Finance</string>
    <string name="low_cost_housingfacility">Low Cost HousingFacility</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="eight">8</string>
    <string name="branch_name">Branch Name :   </string>
    <string name="branch_code">Branch Code :   </string>
    <string name="branch_address">Branch Address :   </string>
    <string name="area">Area :   </string>
    <string name="zone">Zone :   </string>
    <string name="dummy_branch_name">Shahrah-e-Faisal Branch</string>
    <string name="dummy_branch_name_code">1003 - Shahrah-e-Faisal Branch</string>
    <string name="account_type">Account Type</string>
    <string name="dummy_branch_code">0025</string>
    <string name="dummy_branch_address">Plot No. C-1 Main Shahrah-e-Faisal, Karachi </string>
    <string name="dummy_area"> Shahrah-e-Faisal </string>
    <string name="dummy_zone">Downtown </string>
    <string name="sector">Sector </string>
    <string name="get_direction">Get Direction </string>
    <string name="bdo_s">BDO\'s</string>
    <string name="account_title">Account Title</string>
    <string name="account_number">Account Number</string>
    <string name="branch_code_name">Branch Code / Name</string>
    <string name="visit_date">Visit Date</string>
    <string name="visit_time">Visit Time</string>
    <string name="follow_up_date">Follow up Date</string>
    <string name="follow_up_time">Follow up Time</string>
    <string name="product_s">Product(s)</string>
    <string name="dummy_product">Deposit</string>
    <string name="call_log_details">Call Log Details</string>
    <string name="visit_log_details">Visit Log Details</string>
    <string name="previous_visits">Previous Visits</string>
    <string name="dummy_bdb">BDB - 123456</string>
    <string name="dummy_shift_started_at">Shift Started At 10:47 AM 21-10-2020</string>
    <string name="ntb_deposit">NTB DEPOSIT</string>
    <string name="mtd_deposit">MTD DEPOSIT</string>
    <string name="mtd_accounts">MTD ACCOUNTS</string>
    <string name="mtd_ntb_accounts">MTD NTB ACCOUNTS</string>
    <string name="ytd_ntb_accounts">YTD NTB ACCOUNTS</string>
    <string name="ntb_account">NTB ACCOUNTS</string>
    <string name="target_vs_achievement">TARGET \n VS \n ACHIEVEMENT</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="login_id">Please enter your Login ID</string>
    <string name="error_empty_email">PLease Provide Login ID</string>
    <string name="error_empty_customer">PLease Provide Customer Name</string>
    <string name="error_empty_contact">PLease Provide Contact No</string>
    <string name="error_status">PLease Select Status</string>
    <string name="error_product">PLease Select Product</string>
    <string name="error_empty_company">PLease Provide Company Name</string>
    <string name="error_empty_address">PLease Provide Address</string>
    <string name="error_empty_pass">PLease Provide Password</string>
    <string name="enter_otp">PLease Enter OTP</string>
    <string name="error_invalid_id">Invalid Email</string>
    <string name="error_checkbox">Please select answer</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="error_password_length">Password Must be 8 Character</string>
    <string name="request_otp">Request OTP</string>
    <string name="verify">Verify</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="new_password">New Password</string>
    <string name="create_password">Create Password</string>
    <string name="error_empty_field">Empty field not allowed</string>
    <string name="password_hint">Make sure to chose minimum 8 characters hint: John@123</string>
    <string name="error_wrong_password_pattern">Password with minimum 8 characters having:\n\u2022 Small letter(s)\n\u2022 Capital letter(s)\n\u2022 Number(s)\n\u2022 Special character(s)</string>
    <string name="error_different_fields">Password didn\'t match</string>
    <string name="todays_follow_up">TODAY\'S FOLLOW UP</string>
    <string name="todays_call">TODAY\'S CALL</string>
    <string name="todays_visit">TODAY\'S VISIT</string>
    <string name="sales_target">Sales Target</string>
    <string name="achievement">Achievements</string>
    <string name="enter_old_password">Enter Old Password *</string>
    <string name="enter_new_password">Enter New Password *</string>
    <string name="confirm_new_password">Confirm New Password *</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ltd">LTD</string>
    <string name="ntb">NTB</string>
    <string name="ytd">YTD</string>
    <string name="portfolio">Portfolio</string>
    <string name="X">X</string>
    <string name="_10">10</string>
    <string name="_M">M</string>
    <string name="_slash_20M">/20M</string>
    <string name="_slash_20">/20</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="calculator">Calculators</string>
    <string name="branch_directory">Branch Directory</string>
    <string name="total_leads">Total Leads</string>
    <string name="_4">(0)</string>
    <string name="msg_shift_recorded">Shift recorded!</string>
    <string name="name">Abdullah Nagori</string>
    <string name="current_account">Current Account</string>
    <string name="currency">Currency</string>
    <string name="account_number_dummy">Account Number : XXXXXXXXX7980</string>
    <string name="phone_number_dummy">Phone Number : 0320 - XXXXXXX</string>
    <string name="branch_dummy">Branch : Sharah-e-Faisal, Karachi</string>
    <string name="add">Add</string>
    <string name="occupation">Occupation</string>
    <string name="enter_occupation">Enter Occupation</string>
    <string name="enter_source_of_income">Enter Source of Income</string>
</resources>