<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    android:clickable="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            style="@style/txtStyle"
            android:text="@string/customer_name" />


        <EditText
            android:id="@+id/customer_name"
            style="@style/borderStyle"
            android:maxLength="25"
            android:maxLines="1"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
            android:hint="@string/enter_customer_name"
            android:inputType="text" />


        <TextView
            style="@style/txtStyle"
            android:text="@string/contact_number" />


        <EditText
            android:id="@+id/contact_num"
            style="@style/borderStyle"
            android:maxLength="11"
            android:maxLines="1"
            android:hint="@string/enter_contact_number"
            android:inputType="number" />

        <TextView
            style="@style/txtStyle"
            android:text="@string/company_name" />

        <EditText
            android:id="@+id/company_name"
            style="@style/borderStyle"
            android:maxLength="30"
            android:maxLines="1"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
            android:hint="@string/enter_company_name"
            android:inputType="text" />


        <TextView
            style="@style/txtStyle"
            android:text="@string/address" />


        <EditText
            android:id="@+id/address"
            style="@style/borderStyle"
            android:maxLength="35"
            android:maxLines="1"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
            android:hint="@string/enter_address"
            android:inputType="text" />

        <TextView
            style="@style/txtStyle"
            android:text="@string/product" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/product_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/white"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/product_addLead"
                android:hint=""
                style="@style/customerInfoInputFieldsProduct"/>

        </RelativeLayout>

        <TextView
            style="@style/txtStyle"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/amount"
            style="@style/customerInfoInputFields"
            android:hint="@string/dummy_amt"
            android:maxLength="8"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:id="@+id/AdView"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_20ssp"
                android:text="@string/plus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/additional_information"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_additional_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                style="@style/txtStyle"
                android:text="@string/cnic" />

            <EditText
                android:id="@+id/cnic"
                style="@style/borderStyle"
                android:hint="@string/enter_cnic"
                android:maxLength="13"
                android:inputType="number" />


            <TextView
                style="@style/txtStyle"
                android:text="@string/occupation" />

            <EditText
                android:id="@+id/occupation"
                style="@style/borderStyle"
                android:hint="@string/enter_occupation"
                android:maxLength="13"
                android:inputType="number" />


            <TextView
                style="@style/txtStyle"
                android:text="@string/source_of_income" />

            <EditText
                android:id="@+id/source_of_income"
                style="@style/borderStyle"
                android:hint="@string/enter_source_of_income"
                android:maxLength="13"
                android:inputType="number" />



            <TextView
                style="@style/txtStyle"
                android:text="@string/estimated_income" />

            <EditText
                android:id="@+id/es_income"
                style="@style/borderStyle"
                android:hint="@string/enter_income"
                android:maxLength="7"
                android:inputType="number" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">


                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/txtStyle"
                    android:text="@string/age" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/txtStyle"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="@string/gender" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="horizontal">

                <EditText
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/age"
                    android:maxLength="3"
                    android:hint="@string/enter_age"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@drawable/bg_holo_black"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textColorHint="@color/lightGray"
                    android:inputType="number" />


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@drawable/bg_holo_black"
                    android:layout_height="@dimen/_38sdp">


                    <Spinner
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/colorAccent"
                        android:entries="@array/gender" />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/visit_lead"
            style="@style/btnStyle"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/add" />

    </LinearLayout>


</ScrollView>

