<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fragment.CalculatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout style="@style/greenShadow">

            <ImageView
                style="@style/ImgGreen"
                app:srcCompat="@drawable/ic_user_icon" />

            <TextView
                style="@style/textGreen"
                android:text="@string/housing_finance" />

            <TextView
                style="@style/numberGreen"
                android:text="@string/two" />

            <View style="@style/viewGreen" />

        </LinearLayout>

        <LinearLayout
            style="@style/greenShadow"
            android:layout_marginStart="@dimen/_15sdp">

            <ImageView
                style="@style/ImgGreen"
                app:srcCompat="@drawable/ic_user_icon" />

            <TextView
                style="@style/textGreen"
                android:text="@string/cash_finance" />

            <TextView
                style="@style/numberGreen"
                android:text="@string/four" />

            <View style="@style/viewGreen" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout style="@style/greenShadow">

            <ImageView
                style="@style/ImgGreen"
                app:srcCompat="@drawable/ic_user_icon" />

            <TextView
                style="@style/textGreen"
                android:text="@string/apni_car_lower" />

            <TextView
                style="@style/numberGreen"
                android:text="@string/six" />


            <View style="@style/viewGreen" />

        </LinearLayout>

        <LinearLayout
            style="@style/greenShadow"
            android:layout_marginLeft="@dimen/_15sdp">

            <ImageView
                style="@style/ImgGreen"
                app:srcCompat="@drawable/ic_user_icon" />

            <TextView
                style="@style/textGreen"
                android:text="@string/low_cost_housingfacility" />

            <TextView
                style="@style/numberGreen"
                android:text="@string/eight" />

            <View style="@style/viewGreen" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>