<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/zxing_transparent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/margin_small"
        app:strokeColor="@color/colorPrimary"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:strokeWidth="@dimen/_1sdp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/close_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/margin_normal"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_close" />
        </RelativeLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            style="@style/hdngText"
            android:layout_gravity="center"
            android:text="@string/previous_visits" />


        <TextView
            style="@style/txtStyle"
            android:text="@string/customer_name" />

        <TextView
            android:id="@+id/account_title"
            style="@style/customerInfoInputFields"
            android:hint="@string/dummy_name"
            android:inputType="text" />


        <LinearLayout
            style="@style/ll_weightSum_2"
            android:baselineAligned="false">

            <LinearLayout
                android:visibility="gone"
                style="@style/ll_layout_weight_1">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/branch_code_name" />

                <TextView
                    android:id="@+id/branch_code_name"
                    style="@style/customerInfoInputFields"
                    android:hint="@string/branch_code"
                    />

            </LinearLayout>

            <LinearLayout
                style="@style/ll_layout_weight_1"
                >

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/account_no" />

                <TextView
                    android:id="@+id/contact_num"
                    style="@style/customerInfoInputFields"
                    android:hint="@string/dummy_account_no"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                style="@style/ll_layout_weight_1"
                android:layout_marginStart="@dimen/_5sdp">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/contact_no" />

                <TextView
                    android:id="@+id/amount"
                    style="@style/customerInfoInputFields"
                    android:hint="@string/dummy_number"
                    android:inputType="number" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            style="@style/ll_weightSum_2"
            android:baselineAligned="false">

            <LinearLayout style="@style/ll_layout_weight_1">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/area" />

                <TextView
                    android:id="@+id/area"
                    style="@style/customerInfoInputFields"
                    android:hint="@string/dummy_area"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                style="@style/ll_layout_weight_1"
                android:layout_marginStart="@dimen/_5sdp">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/zone" />

                <TextView
                    android:id="@+id/zone"
                    style="@style/customerInfoInputFields"
                    android:hint="@string/dummy_zone"
                    android:inputType="text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            style="@style/ll_weightSum_2"
            android:baselineAligned="false">

            <LinearLayout style="@style/ll_layout_weight_1">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/date"
                    style="@style/customerInfoInputFields"
                    android:hint="@string/dummy_date"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                style="@style/ll_layout_weight_1"
                android:layout_marginStart="@dimen/_5sdp">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/time"
                    style="@style/customerInfoInputFields"
                    android:hint="@string/dummy_time"
                    android:inputType="text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/ll_weightSum_2"
            android:baselineAligned="false">

            <LinearLayout style="@style/ll_layout_weight_1">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/visit_date" />

                <TextView
                    style="@style/customerInfoInputFields"
                    android:hint="02-04-2019"/>

            </LinearLayout>

            <LinearLayout
                style="@style/ll_layout_weight_1"
                android:layout_marginStart="@dimen/_5sdp">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/visit_time" />

                <TextView
                    android:id="@+id/date_of_conversion"
                    style="@style/customerInfoInputFields"
                    android:hint="04:55 PM"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_follow_up"
            style="@style/ll_weightSum_2"
            android:baselineAligned="false">

            <LinearLayout style="@style/ll_layout_weight_1">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/status"
                    style="@style/customerInfoInputFields"
                    android:hint="Follow up"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_layout_weight_1"
                android:layout_marginStart="@dimen/_5sdp">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/date_of_conversion" />

                <TextView
                    android:id="@+id/follow_up_time"
                    style="@style/customerInfoInputFields"
                    android:hint="04:55 PM"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/ll_weightSum_2"
            android:baselineAligned="false">

            <LinearLayout style="@style/ll_layout_weight_1">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/follow_up_date" />

                <TextView
                    style="@style/customerInfoInputFields"
                    android:hint="Follow up"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                style="@style/ll_layout_weight_1"
                android:layout_marginStart="@dimen/_5sdp">

                <TextView
                    style="@style/txtStyle"
                    android:text="@string/follow_up_time" />

                <TextView
                    style="@style/customerInfoInputFields"
                    android:hint="04:55 PM"
                    android:inputType="text" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/txtStyle"
            android:visibility="gone"
            android:text="@string/follow_up_date" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:visibility="gone"
            android:orientation="horizontal"
            android:background="@drawable/bg_holo_black"
            android:layout_marginTop="@dimen/_5sdp">

            <Button
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="Deposit"
                android:background="@drawable/btn_orange_bg"/>

            <Button
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="Apni Car"
                android:background="@drawable/btn_orange_bg"/>

            <Button
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="Sms"
                android:background="@drawable/btn_orange_bg"/>
        </LinearLayout>

        <TextView
            style="@style/txtStyle"
            android:text="@string/remarks" />

        <TextView
            android:id="@+id/remarks"
            style="@style/customerInfoInputFields"
            android:layout_height="@dimen/_70sdp"
            android:gravity="top"
            android:hint="@string/dummy_remarks"
            android:inputType="text"
            android:maxLines="5"
            android:paddingBottom="@dimen/_15sdp" />

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>

